--- a/TimerAssessment/PastAssessment/PastAssessmentTableViewCell.xib
+++ b/TimerAssessment/PastAssessment/PastAssessmentTableViewCell.xib
@@ -19,10 +19,10 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="diW-fH-YUn">
-                        <rect key="frame" x="458" y="20" width="60" height="60"/>
+                        <rect key="frame" x="438" y="20" width="80" height="80"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="60" id="4X5-ZT-un9"/>
-                            <constraint firstAttribute="width" constant="60" id="iFC-Ac-OwO"/>
+                            <constraint firstAttribute="height" constant="80" id="4X5-ZT-un9"/>
+                            <constraint firstAttribute="width" constant="80" id="iFC-Ac-OwO"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
@@ -38,32 +38,8 @@
                             <action selector="copyAssessmentResult:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="s56-eV-o9v"/>
                         </connections>
                     </button>
-                    <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="pkh-yD-5RQ">
-                        <rect key="frame" x="455" y="90" width="73" height="61"/>
-                        <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="YHQ-L2-vYv">
-                                <rect key="frame" x="0.0" y="0.0" width="73" height="61"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="測定日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Fze-29-HWd">
-                                        <rect key="frame" x="77" y="46" width="37" height="15"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="V5Z-ux-wXZ">
-                                        <rect key="frame" x="42" y="23" width="31" height="15"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                            </stackView>
-                        </subviews>
-                    </stackView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイム" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DI3-5O-KXP">
-                        <rect key="frame" x="50" y="20" width="180" height="50"/>
+                        <rect key="frame" x="50" y="10" width="180" height="50"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="180" id="3Z9-mp-65D"/>
                             <constraint firstAttribute="height" constant="50" id="nmw-j9-rWq"/>
@@ -72,24 +48,46 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="測定日" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M0A-6J-m5q">
+                        <rect key="frame" x="30" y="70" width="52" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="52" id="94I-Wv-GY7"/>
+                            <constraint firstAttribute="height" constant="30" id="EfK-D5-z0I"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNg-cI-lSu">
+                        <rect key="frame" x="92" y="70" width="42" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="30" id="43P-YI-yyv"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="7te-8m-rUK"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="M0A-6J-m5q" firstAttribute="top" secondItem="DI3-5O-KXP" secondAttribute="bottom" constant="10" id="5Oe-Ld-eaf"/>
                     <constraint firstItem="DI3-5O-KXP" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="50" id="E57-cb-DvB"/>
                     <constraint firstAttribute="trailing" secondItem="diW-fH-YUn" secondAttribute="trailing" constant="20" id="FQy-zv-bpg"/>
-                    <constraint firstAttribute="bottom" secondItem="pkh-yD-5RQ" secondAttribute="bottom" constant="10" id="HV8-Ow-Na4"/>
-                    <constraint firstAttribute="trailing" secondItem="pkh-yD-5RQ" secondAttribute="trailing" constant="10" id="aPA-VR-vby"/>
-                    <constraint firstItem="pkh-yD-5RQ" firstAttribute="top" secondItem="diW-fH-YUn" secondAttribute="bottom" constant="10" id="cGH-12-Xje"/>
+                    <constraint firstItem="M0A-6J-m5q" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="10" id="TVh-6g-qYO"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="M0A-6J-m5q" secondAttribute="bottom" constant="10" id="VzY-I5-kJq"/>
                     <constraint firstItem="diW-fH-YUn" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="cQJ-cQ-4dT"/>
-                    <constraint firstItem="DI3-5O-KXP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="ftF-Oc-i4w" customClass="Pa"/>
+                    <constraint firstItem="DI3-5O-KXP" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="ftF-Oc-i4w" customClass="Pa"/>
+                    <constraint firstItem="mNg-cI-lSu" firstAttribute="leading" secondItem="M0A-6J-m5q" secondAttribute="trailing" constant="10" id="lbW-RQ-E7W"/>
+                    <constraint firstItem="mNg-cI-lSu" firstAttribute="top" secondItem="DI3-5O-KXP" secondAttribute="bottom" constant="10" id="vJh-nP-bOm"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="copyTextButton" destination="diW-fH-YUn" id="NrH-SC-nPg"/>
-                <outlet property="createdAtLabel" destination="V5Z-ux-wXZ" id="lSi-Mp-VI1"/>
+                <outlet property="createdAtLabel" destination="mNg-cI-lSu" id="CoC-bV-J6w"/>
                 <outlet property="timerResultNumLabel" destination="DI3-5O-KXP" id="Vo0-p4-7Oe"/>
             </connections>
-            <point key="canvasLocation" x="302.89855072463769" y="156.02678571428569"/>
+            <point key="canvasLocation" x="302.89855072463769" y="155.35714285714286"/>
         </tableViewCell>
     </objects>
     <resources>
